<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/confirm_password_fragment_iv_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/confirm_password_fragment_iv_login_image"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/image_login"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <EditText
        android:id="@+id/confirm_password_fragment_ET_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/كود_التحقيق"
        android:textSize="@dimen/_16sdp"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_fragment_iv_login_image"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/confirm_password_fragment_ET_Password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/كلمه_المرور_الجديده"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_fragment_ET_code"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        />
    <EditText
        android:id="@+id/confirm_password_fragment_ET_confirm_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:textSize="@dimen/_16sdp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/تأكيد_كلمه_المرور_الجديده"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_fragment_ET_Password"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        />

    <Button
        android:id="@+id/confirm_password_fragment_btn"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/تغيير"
        android:background="@drawable/btn_background"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_fragment_ET_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
      />
</androidx.constraintlayout.widget.ConstraintLayout>