<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/forget_password_fragment_iv_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />
    <ImageView
        android:id="@+id/forget_password_fragment_iv_login_image"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/image_login"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <EditText
        android:id="@+id/forget_password_fragment_ET_Phone"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:hint="@string/الجوال"
        android:textSize="@dimen/_16sdp"
        android:textColorHint="#9A0B0B"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/forget_password_fragment_iv_login_image"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login_fragment_btn_login"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/ارسال"
        android:background="@drawable/btn_background"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_fragment_ET_Phone" />
</androidx.constraintlayout.widget.ConstraintLayout>